# deoxys-test

./: Cargo.toml  output.json  output2.json
rocksdb1/: IDENTITY  LOG  OPTIONS-000011
rocksdb2/: IDENTITY  LOG  MANIFEST-000005
src/: main.rs
