[package]
edition = "2021"
name = "deoxys_test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonsai-trie = { git = "https://github.com/antiyro/bonsai-trie.git", features = [
    "rocksdb"
]}
bitvec = "1.0.1"
tempfile = "3.10.1"
rocksdb = { version = "0.21.0", features = [
    "multi-threaded-cf",
] }
lazy_static = "1.4.0"
starknet = { git = "https://github.com/jbcaron/starknet-rs.git", branch = "classes" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.81"
starknet-ff = { git = "https://github.com/jbcaron/starknet-rs.git" }
starknet-types-core = { git = "https://github.com/starknet-io/types-rs.git", branch = "main", default-features = false, features = [
    "hash",
    "parity-scale-codec"
] }
indicatif = "0.17.8"
