[package]
edition = "2021"
name = "deoxys_test"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bonsai-trie = { git = "https://github.com/massalabs/bonsai-trie.git", branch = "add_multi_trie_management", features = [
    "rocksdb"
]}
bitvec = "1.0.1"
tempfile = "3.10.1"
rocksdb = { version = "0.21.0", features = [
    "multi-threaded-cf",
] }
lazy_static = "1.4.0"
starknet = { git = "https://github.com/jbcaron/starknet-rs.git", branch = "classes" }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.81"
starknet-ff = { git = "https://github.com/jbcaron/starknet-rs.git" }
starknet-types-core = { version = "0.0.7", default-features = false, features = [
    "hash",
    "parity-scale-codec",
] }
indicatif = "0.17.8"
pathfinder-merkle-tree = { git = "https://github.com/massalabs/pathfinder.git", package = "pathfinder-merkle-tree", rev = "b7b6d76a76ab0e10f92e5f84ce099b5f727cb4db" }
pathfinder-common = { git = "https://github.com/massalabs/pathfinder.git", package = "pathfinder-common", rev = "b7b6d76a76ab0e10f92e5f84ce099b5f727cb4db" }
pathfinder-crypto = { git = "https://github.com/massalabs/pathfinder.git", package = "pathfinder-crypto", rev = "b7b6d76a76ab0e10f92e5f84ce099b5f727cb4db" }
pathfinder-storage = { git = "https://github.com/massalabs/pathfinder.git", package = "pathfinder-storage", rev = "b7b6d76a76ab0e10f92e5f84ce099b5f727cb4db" }
